# smart-linkedin-posts

./: README.md  pyproject.toml
smart_linkedin_posts/: app.py
